--- a/RigidBodySimulatorLinear/RigidBodySimulatorLinear.csproj
+++ b/RigidBodySimulatorLinear/RigidBodySimulatorLinear.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\PSI_Collider.cs" />
     <Compile Include="Assets\Scripts\PSI_CollisionManager.cs" />
     <Compile Include="Assets\Scripts\PSI_Physics.cs" />
+    <Compile Include="Assets\Scripts\PSI_PlaneCollider.cs" />
     <Compile Include="Assets\Scripts\PSI_RigidBody.cs" />
     <Compile Include="Assets\Scripts\PSI_SphereCollider.cs" />
   </ItemGroup>
